plik_Korol.html

--- a/plik_Korol.html
+++ b/plik_Korol.html
@@ -6,7 +6,7 @@
     </head>
 
     <body>
-		<p>Tutaj będzie plik</p>
+	<a href ="zamkniętyfolder.zip">k&nbsp;l&nbsp;i&nbsp;k&nbsp; aby ściągnąć plik</a>
         <a href="./index.html">wróć</a>
 
     </body>
