tabela_Korol.html

--- a/tabela_Korol.html
+++ b/tabela_Korol.html
@@ -6,7 +6,62 @@
     </head>
 
     <body>
-		<p>Tutaj będzie tabela</p>
+		<table style="red:background-color: #E9E95D;border:4px solid red;border-collapse: collapse;">
+ <thead>
+
+    <td colspan="5" id="tabletitle" style="text-align: center; background-color: #ffff66;"><font color=purple ; face="gothic"><h3>Maciej Korol 2K1</h3></font></td>
+ <tr style="background-color: #6ba7df;:3px solid black;border-collapse: collapse;">
+	<th style="border:1px solid rgb(255, 0, 0);border-collapse: collapse;">model karty <br>graficznej </th>
+	<th style="border:1px solid rgb(255, 0, 0);border-collapse: collapse;">Taktowanie<br> bazowe </th>
+	<th style="border:1px solid rgb(255, 0, 0);border-collapse: collapse;">Rozmiar<br> pamięci </th>
+	<th style="border:1px solid rgb(255, 0, 0);border-collapse: collapse;">szyna <br>pamięci </th>
+	<th style="border:1px solid rgb(255, 0, 0);border-collapse: collapse;">typ <br>chłodzenia </th>
+	</tr>
+ </thead>
+ 
+ 
+ <tbody>
+ <tr style="background-color: #78ff00;: Comic Sans; MS;font-size: 22px;">
+	<td style="border:1px solid rgb(255, 0, 0);border-collapse: collapse;"><font face="gothic" color=red>RX 7900 XTX</font></td>
+	<td style="border:1px solid rgb(255, 0, 0);border-collapse: collapse;"><font color="black"; face="Comic Sans MS">&nbsp;&nbsp;&nbsp;&nbsp;2400 MHz&nbsp;</font></td>
+	<td style="border:1px solid rgb(255, 0, 0);border-collapse: collapse;"><font color="black"; face="Comic Sans MS">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;24 GB&nbsp;</font></td>
+	<td style="border:1px solid rgb(255, 0, 0);border-collapse: collapse;"><font color="black"; face="Comic Sans MS">&nbsp;&nbsp;&nbsp;&nbsp;384-bit&nbsp;&nbsp;&nbsp;&nbsp;</font></td>
+	<td style="border:1px solid rgb(255, 0, 0);border-collapse: collapse;" rowspan="6"; >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Aktywne&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font></td>
+ </tr>
+ <tr style="background-color: #7ac835;: Comic Sans; MS;font-size: 22px;">
+	<td style="border:1px solid rgb(255, 0, 0);border-collapse: collapse;"><font face="gothic" color=red>RX 7900 XT</font></td>
+	<td style="border:1px solid rgb(255, 0, 0);border-collapse: collapse;"><font color="black"; face="Comic Sans MS">&nbsp;&nbsp;&nbsp;&nbsp;2000 MHz&nbsp;</font></td>
+	<td style="border:1px solid rgb(255, 0, 0);border-collapse: collapse;"><font color="black"; face="Comic Sans MS">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;20 GB&nbsp;</font></td>
+	<td style="border:1px solid rgb(255, 0, 0);border-collapse: collapse;"><font color="black"; face="Comic Sans MS">&nbsp;&nbsp;&nbsp;&nbsp;320-bit&nbsp;&nbsp;&nbsp;&nbsp;</font></td>
+ </tr>
+	<tr style="background-color: #6ea939;: Comic Sans; MS;font-size: 22px;">
+	<td style="border:1px solid rgb(255, 0, 0);border-collapse: collapse;"><font face="gothic" color=red>RX 7800 XT</font></td>
+	<td style="border:1px solid rgb(255, 0, 0);border-collapse: collapse;"><font color="black"; face="Comic Sans MS">&nbsp;&nbsp;&nbsp;&nbsp;2200 MHz&nbsp;</font></td>
+	<td style="border:1px solid rgb(255, 0, 0);border-collapse: collapse;"><font color="black"; face="Comic Sans MS">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;16 GB&nbsp;</font></td>
+	<td style="border:1px solid rgb(255, 0, 0);border-collapse: collapse;"><font color="black"; face="Comic Sans MS">&nbsp;&nbsp;&nbsp;&nbsp;256-bit&nbsp;&nbsp;&nbsp;&nbsp;</font></td>
+ </tr>
+ <tr style="background-color: #568d24;: Comic Sans; MS;font-size: 22px;">
+	<td style="border:1px solid rgb(255, 0, 0);border-collapse: collapse;"><font face="gothic" color=red>RX 7700 XT</font></td>
+	<td style="border:1px solid rgb(255, 0, 0);border-collapse: collapse;"><font color="black"; face="Comic Sans MS">&nbsp;&nbsp;&nbsp;&nbsp;2150 MHz&nbsp;</font></td>
+	<td style="border:1px solid rgb(255, 0, 0);border-collapse: collapse;"><font color="black"; face="Comic Sans MS">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;12 GB&nbsp;</font></td>
+	<td style="border:1px solid rgb(255, 0, 0);border-collapse: collapse;"><font color="black"; face="Comic Sans MS">&nbsp;&nbsp;&nbsp;&nbsp;192-bit&nbsp;&nbsp;&nbsp;&nbsp;</font></td>
+ </tr>
+ <tr style="background-color: #446e1f;: Comic Sans; MS;font-size: 22px;">
+	<td style="border:1px solid rgb(255, 0, 0);border-collapse: collapse;"><font face="gothic" color=red>RX 7600 XT</font></td>
+	<td style="border:1px solid rgb(255, 0, 0);border-collapse: collapse;"><font color="black"; face="Comic Sans MS">&nbsp;&nbsp;&nbsp;&nbsp;2250 MHz&nbsp;</font></td>
+	<td style="border:1px solid rgb(255, 0, 0);border-collapse: collapse;"><font color="black"; face="Comic Sans MS">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;8 GB&nbsp;</font></td>
+	<td style="border:1px solid rgb(255, 0, 0);border-collapse: collapse;"><font color="black"; face="Comic Sans MS">&nbsp;&nbsp;&nbsp;&nbsp;128-bit&nbsp;&nbsp;&nbsp;&nbsp;</font></td>
+ </tr>
+ <tr style="background-color: #408107;: Comic Sans; MS;font-size: 22px;">
+	<td style="border:1px solid rgb(255, 0, 0);border-collapse: collapse;"><font face="gothic" color=red>RX 7500 XT</font></td>
+	<td style="border:1px solid rgb(255, 0, 0);border-collapse: collapse;"><font color="black"; face="Comic Sans MS">&nbsp;&nbsp;&nbsp;&nbsp;2350 MHz&nbsp;</font></td>
+	<td style="border:1px solid rgb(255, 0, 0);border-collapse: collapse;"><font color="black"; face="Comic Sans MS">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;8 GB&nbsp;</font></td>
+	<td style="border:1px solid rgb(255, 0, 0);border-collapse: collapse;"><font color="black"; face="Comic Sans MS">&nbsp;&nbsp;&nbsp;&nbsp;128-bit&nbsp;&nbsp;&nbsp;&nbsp;</font></td>
+ </tr>
+ <td colspan="5" id="tabletitle" style="text-align: center; background-color: #ffff66;"><font color=purple ; face="gothic"><h3>Dane komputerowe</h3></font></td>
+ </tbody>
+</table>
+
         <a href="./index.html">wróć</a>
 
     </body>
