formularz_Korol.html

--- a/formularz_Korol.html
+++ b/formularz_Korol.html
@@ -52,14 +52,14 @@
 <input type="radio" name="Na ile * oceniasz obsługę" value="4">4
 <input type="radio" name="Na ile * oceniasz obsługę" value="5">5
 
-<p>5. Jakie elementy wnetrz podobają ci się?</p>
+<p>5. Jakie elementy wnetrza podobają ci się?</p>
 <input type="checkbox" name="wystrój" value="Własna">Własna:
 <input type="text" name="wystrój" size="60" maxlength="50" placeholder="Max 50 słów"/><br>
-<input type="checkbox" name="wystrój" value="jest idealnie">jest idealnie
-&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<input type="checkbox" name="wystrój" value="średnio">średnio<br>
-<input type="checkbox" name="wystrój" value="bardzo">bardzo
-&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<input type="checkbox" name="wystrój" value="nie">nie<br>
-<input type="checkbox" name="wystrój" value="dobrze">dobrze
+<input type="checkbox" name="wystrój" value="Wystrój">Wystrój
+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<input type="checkbox" name="wystrój" value="Aranżacja">Aranżacja<br>
+<input type="checkbox" name="wystrój" value="Kompozycja">Kompozycja
+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<input type="checkbox" name="wystrój" value="Styl">Styl<br>
+<input type="checkbox" name="wystrój" value="Klimat">Klimat
 &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<input type="checkbox" name="wystrój" value="brak zdania" checked>brak zdania<br>
 
 <p>6. Jakie jedzenie z naszej oferty najbardziej lubisz?</p>
